<resources>
    <string name="app_name">FireBase</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="sign_in">Login</string>
    <string name="sign_out">Logout</string>
    <string name="login_title">Please login</string>
    <string name="skip">Skip</string>
    <string name="label_activity_main">MainActivity</string>
    <string name="menu_bottle">Бутылки</string>
    <string name="menu_food">Еда</string>
    <string name="menu_fridges">Холодильники</string>
    <string name="menu_home">Домой</string>
    <string name="menu_users">Пользователи</string>
</resources>