<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bottle"
            android:icon="@drawable/bottle"
            android:title="@string/menu_bottle" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/food"
            android:title="@string/menu_food" />
        <item
            android:id="@+id/nav_fridges"
            android:icon="@drawable/storefront"
            android:title="@string/menu_fridges" />
    </group>

</menu>